# hunch

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: deploy-web.yml  mint-e2e.yml  verify.yml  web-mint-e2e.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-cypherpunk-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-mainnet-spine/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/hunch-web/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/hunch-web/app/: globals.css  layout.tsx  page.tsx
apps/hunch-web/app/bet/: page.tsx
apps/hunch-web/app/create/: page.tsx
apps/hunch-web/app/market/: page.tsx
apps/hunch-web/lib/: build.test.ts  build.ts  disputes.ts  dlc.test.ts  dlc.ts  hunch.test.ts  hunch.ts  mint.ts  oracle.ts  orderbook.test.ts  orderbook.ts  publish.ts  relay.ts  sign.ts  verify.test.ts  verify.ts  wallet.ts
apps/hunch-web/scripts/: cli-roundtrip-e2e.ts  fetch-attestation-e2e.ts  wallet-e2e.ts
crates/hunch-cli/: Cargo.toml
crates/hunch-cli/src/: lib.rs  main.rs
crates/hunch-dlc/: Cargo.toml
crates/hunch-dlc/src/: attestation.rs  conditional.rs  lib.rs
crates/hunch-matcher/: Cargo.toml
crates/hunch-matcher/src/: engine.rs  lib.rs  main.rs
crates/hunch-mint/: Cargo.toml  DEPLOYMENT.md  cdk-mintd.ci.toml  cdk-mintd.example.toml
crates/hunch-mint/src/: cashu_token.rs  lib.rs  token.rs
crates/hunch-mint/tests/: e2e_mint.rs
crates/hunch-nostr/: Cargo.toml
crates/hunch-nostr/src/: event.rs  lib.rs  relay.rs
crates/hunch-oracle/: Cargo.toml
crates/hunch-oracle/src/: dlc.rs  event.rs  lib.rs  main.rs  nonce_store.rs  relay.rs  service.rs
crates/hunch-protocol/: Cargo.toml
crates/hunch-protocol/src/: dispute.rs  error.rs  event_kinds.rs  lib.rs  market.rs  mint_announce.rs  oracle.rs  order.rs  outcome.rs  reputation.rs
crates/hunch-relay/: Cargo.toml
crates/hunch-relay/src/: engine.rs  lib.rs  main.rs
docs/: DEMO.md  HIP-0.md  HIP-1.md  HIP-2.md  HIP-3.md  HIP-4.md  HIP-5.md  HIPs-reviews.md  MANIFESTO.md  audit-shortlist-outreach.md  nips-pr-kind-reservation.md
docs/legal/: PHASE-1-FOLLOWUP.md  PRIVACY.md  PR_PLAYBOOK.md  PSEUDONYMITY-public.md  PSEUDONYMITY.md  README.md  TERMS.md  counsel-outreach-log.md  counsel-shortlist.md  engagement-letter-status.md  jurisdiction-memo.md
docs/legal/signoff/: .gitignore  README.md
scripts/: publish-hip.ts  verify-hips.sh  verify-kind-collisions.ts  verify-repo.sh
spikes/frost-dkg/: PLAYBOOK.md
spikes/frost-dkg/ceremony-transcripts/: .gitkeep
spikes/lightning-dlc/: GO-NOGO.md
spikes/nut-ctf/: PATH-A-VALIDATION.md  README.md  SPIKE-02-RESOLUTION.md  outreach-log.md
