[package]
name = "hunch-mint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hunch mint — outcome-conditional ecash tokens (HIP-3) as NUT-11 P2PK locked to the oracle signature point. No NUT-CTF dependency."

[lib]
name = "hunch_mint"
path = "src/lib.rs"

[dependencies]
hunch-protocol = { path = "../hunch-protocol" }
hunch-dlc = { path = "../hunch-dlc" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex = "0.4"

[dev-dependencies]
secp256k1 = { version = "0.30", features = ["global-context"] }
