[package]
name = "hunch-nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hunch Nostr client primitives — NIP-01 event signing + minimal relay publish/query. No Nostr SDK; built on workspace secp256k1/sha2/serde_json."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
tokio = { workspace = true }
secp256k1 = { version = "0.30", features = ["global-context", "rand"] }
hex = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots"] }
