[package]
name = "hunch-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hunch protocol — shared types and HIP reference types (Phase 1: stub)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
